--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@types/dat.gui": "0.7.5",
     "dat.gui": "0.7.7",
+    "rxjs": "^6.6.3",
     "three.js": "0.77.1"
   },
   "devDependencies": {
